// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailExplosievenVerdachtGebied rendering should render everything 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--pano
      "
  >
    <img
      alt="Panoramabeeld"
      className="map-detail-result__header-pano"
      src="panoUrl"
    />
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        Verdacht gebied
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Verdacht gebied label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoofdgroep"
      value="Verdacht gebied type"
    />
    <MapDetailResultItem
      label="Subsoort"
      value="Verdacht gebied sub type"
    />
    <MapDetailResultItem
      label="Opmerkingen"
      value="Verdacht gebied remarks"
    />
  </ul>
</section>
`;

exports[`MapDetailExplosievenVerdachtGebied rendering should render without pano url 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        Verdacht gebied
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Verdacht gebied label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="Hoofdgroep"
      value="Verdacht gebied type"
    />
    <MapDetailResultItem
      label="Subsoort"
      value="Verdacht gebied sub type"
    />
    <MapDetailResultItem
      label="Opmerkingen"
      value="Verdacht gebied remarks"
    />
  </ul>
</section>
`;
